[package]
name = "step-by-step-turso-test"
version = "0.1.0"
edition = "2021"

[dependencies]
turso = "0.10.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
anyhow = "1.0"

[[bin]]
name = "step1_connection"
path = "tests/step1_connection.rs"

[[bin]]
name = "step2_basic_insert"
path = "tests/step2_basic_insert.rs"

[[bin]]
name = "step3_on_conflict"
path = "tests/step3_on_conflict.rs"

[[bin]]
name = "step4_upsert_benchmark"
path = "tests/step4_upsert_benchmark.rs"

[[bin]]
name = "step5_rapid_calls"
path = "tests/step5_rapid_calls.rs"
