[package]
name = "jup-sdk"
version = "0.1.0"
edition = "2024"

# This empty workspace declaration isolates the project from the parent workspace.
[workspace]

[lib]
name = "jup_sdk"
path = "src/lib.rs"

[[example]]
name = "swap"
path = "examples/swap.rs"

[[example]]
name = "deposit"
path = "examples/deposit.rs"

[[example]]
name = "withdraw"
path = "examples/withdraw.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
solana-client = "2.2"
solana-sdk = "2.2"
spl-associated-token-account = "7.0.0"
spl-token ="8.0.0"
solana-address-lookup-table-program = "2.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4"
bs58 = "0.5"
bincode = "1.3"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
ed25519-dalek = "2.2.0"
