[package]
name = "jup-sdk"
version = "0.1.0"
edition = "2024"

[lib]
name = "jup_sdk"
path = "src/lib.rs"

[[example]]
name = "swap"
path = "examples/swap.rs"

[[example]]
name = "deposit"
path = "examples/deposit.rs"

[[example]]
name = "withdraw"
path = "examples/withdraw.rs"

[[example]]
name = "deposit_sol"
path = "examples/deposit_sol.rs"

[[example]]
name = "withdraw_sol"
path = "examples/withdraw_sol.rs"

[[test]]
name = "swap_test"
path = "tests/swap_test.rs"

[[test]]
name = "deposit_test"
path = "tests/deposit_test.rs"

[[test]]
name = "withdraw_test"
path = "tests/withdraw_test.rs"

# [[test]]
# name = "integration_test"
# path = "tests/integration_test.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
solana-client = "2.2"
solana-sdk = "2.2"
spl-associated-token-account = "7.0.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

chrono = "0.4"
hex = "0.4"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
