[package]
name = "jup-sdk"
version = "0.1.0"
edition = "2024"

[lib]
name = "jup_sdk"
path = "src/lib.rs"

[[example]]
name = "swap"
path = "examples/swap.rs"

[[example]]
name = "deposit"
path = "examples/deposit.rs"

[[example]]
name = "withdraw"
path = "examples/withdraw.rs"

[[example]]
name = "deposit_sol"
path = "examples/deposit_sol.rs"

[[example]]
name = "withdraw_sol"
path = "examples/withdraw_sol.rs"

[[test]]
name = "swap_test"
path = "tests/swap_test.rs"

[[test]]
name = "deposit_test"
path = "tests/deposit_test.rs"

[[test]]
name = "withdraw_test"
path = "tests/withdraw_test.rs"

# [[test]]
# name = "integration_test"
# path = "tests/integration_test.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
solana-client = { version = "2.3", default-features = false }
solana-sdk = { version = "2.3", default-features = false }
spl-associated-token-account = { version = "7.0.0", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"], default-features = false }
reqwest = { version = "0.12", features = ["json"], default-features = false }

chrono = { version = "0.4" }
hex = { version = "0.4" }
base64 = { version = "0.22", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
dotenvy = { version = "0.15", default-features = false }
