[package]
name = "jupiter-lend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.0"
solana-client = "2.0"
solana-account-decoder = "2.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
axum = "0.7"
base64 = "0.22"
rust_decimal = "1.35"
anyhow = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
